 * fixed bug in is_one() (segfault under v.5.6.x)
 * implemented length() and digit() for integers
 * beefed up testing class Test.pm to make more float tests work (185 of them
   still fail)
 * added AUTOLOAD to load fxxx() stubs (for BigFloat compatibility tests)
 * $IMPORT for require and AUTOLOAD
 * added as_bin(), as_hex() which work for integers, NaN, and +-inf
 * implement broot() and blog() for non-integer numbers
 * fixed blsft()/brsft() to work with undefined or scalar base
 * added a copy() method to be independend from BigInt's copy()
 * adopted to new internal format of Math::BigFloat v1.44 (from BigInt v1.70)
2004-10-22 v0.13 Tels 892 tests
 * fixed digit(): it never worked due to dropping the second parameter
 * fixed a bug in brsft() when passing arguments (2 vs. 3 in objectify)
 * use Math::BigInt->config('lib') for parts instead of Math::BigInt
   + This makes everything go about 2..4 times faster :)
   + And it saves memory (408 vs. 807 bytes for a simple number)
 * _as_float() is about 6 times as fast for integers (e.g. 123/1 vs. 2/3)
 * denominator() returns 1 for +inf and -inf (+inf/1, -inf/1) instead of +-inf
 * when using "lib => GMP;", certain things never worked:
   + sqrt() was not possible
   + new("2.3") did not work
   + new("12.3e-2") did not work
2005-01-01 v0.14 Tels 924 tests
 * require Math::BigInt v1.74
 * streamline copy()
 * inline is_zero() into bneg(), making it about 50% faster
 * more tests for bneg()
 * register callback to get notified of lib changes from Math::BigInt
 * much simpler import() logic
 * new() accepts input like new(Math::BigInt->new(123),Math::BigInt->new(7));
 * doc: as_hex(), as_bin(), add note about as_pos(), as_neg() and as_int()
 * numify() now deals with large N and D by using BigFloat (Thanx Hugo!)
 * numify() lost the sign on negative integer values (Thanx Zefram!)

Please send me test-reports, your experiences with this and your ideas - I love
to hear about my work!

Tels <http://bloodgate.com/>