@@ -158,6 +158,13 @@ Math::BigRat:
  * doc: as_hex(), as_bin(), add note about as_pos(), as_neg() and as_int()
  * numify() now deals with large N and D by using BigFloat (Thanx Hugo!)
  * numify() lost the sign on negative integer values (Thanx Zefram!)
+2005-04-02 v0.15 Tels 924 tests
+ * no need to require Exporter
+ * rem no longer used 'with' from import
+ * add a few comments here and there
+ * fix import()'s handling of the lib argument (it didn't work)
+ * fix segfault under trap_nan in _bnan()
+ * remove unused IMPORT logic (require BigRat seems to work without it)
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
